@startuml
class InventoryManager
{
    start()
    main()
}

class mainWindowController
{
    + serialNumTextField, valueTextField, nameTextField : TextField
    + itemDataList : ObservableList<InventoryItem>
    + inventoryTable : TableView
    + nameColumn, SerialNumberColumn, valueColumn : TableColumn
    + rightClickMenu : ContextMenu
    + decimalFormat : DecimalFormat


    + addItemButtonClicked()
    + removeItemButtonClicked()
    + loadButtonClicked()
    + editNameButtonClicked()
    + editSerialNumberButtonClicked()
    + editValueButtonClicked()
    + saveAsTSVButtonClicked()
    + saveAsHTMLButtonClicked()
    + saveAsJSONButtonClicked()
    + sortByNameButtonClicked()
    + sortByValueClicked()
    + sortBySerialNumClicked()
    + searchByNameClicked()
    + searchByValueClicked()

    - addItem()
    - removeItem()
    - loadInventoryFile()
    - loadTSV()
    - loadHTML()
    - loadJSON()
    - editName()
    - editValue()
    - editSerialNumber()
    - saveTSV()
    - saveHTML()
    - saveJSON()
    - searchByName()
    - searchBySerialNum()
}

class inventoryItem
{
    dollarVal : String
    serialNum : String
    name : String

    + getName() : String
    + getSerialNum() : String
    + getDollarVal() : double

    + setDollarVal(double)
    + setName(String)
    + setSerialNum(String)

    - hasInvalidCharacter(String) : boolean
}

class SceneManager
{
    loadAll()
    getScene(String) : Scene
    setupDialogStage(String sceneName, string title, boolean resizeable)
    setupDialogStageWithSingleItem(String sceneName, string title, boolean resizeable, InventoryItem)
    setupDialogStageWithSingleItem(String sceneName, string title, boolean resizeable, ObservableList<InventoryItem>)

}

class NameFormatDialogController
{
    + nameFormatGridPane : GridPane
    + NFDialogCLicked()
}

class SNFormatDialogController
{
   + outerGridPane : GridPane
   + clearSerialNumberFieldClicked()
}

class ValueFormatDialogController
{
    + valueOkButton : Button
    + VFOkClicked()
}

class editNameController
{
    + editNameTextField : TextField
    + changeItemNameButtonClicked()
    + setNewName()
}

class editSerialNumberController
{
    + editSerialNumberTextField : TextField
    + changeSerialNumberButtonClicked()
    + setNewSerialNumber()
}

class editValueController
{
    + editValueTextField : TextField
    + changeValueButtonClicked()
    + setNewValue()
}

class SerialNumberSearchController
{
    searchList : ObservableList<InventoryItem>
    SN searchTable : TableView
    SNSearchNameColumn, SNValueColumn, SNSearchSNColumn : TableColumn
    searchSNTextField : TextField

    serialNumberSearchItemButtonClicked()

}

class NameSearchController
{
    searchList : ObservableList<InventoryItem>
    SN searchTable : TableView
    nameSearchNameColumn, nameSearchValueColumn, nameSearchSNColumn : TableColumn
    searchNameTextField : TextField

    NameSearchItemButtonClicked()

}


openjfx.org.Application <|-- InventoryManager
InventoryManager -- SceneManager
SceneManager ---- mainWindowController

SceneManager - NameFormatDialogController
SceneManager - SNFormatDialogController
ValueFormatDialogController - SceneManager


mainWindowController - editNameController
mainWindowController - editSerialNumberController
mainWindowController - editValueController

SerialNumberSearchController - mainWindowController
NameSearchController - mainWindowController

mainWindowController -- inventoryItem

@enduml